--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 edition = "2024"
 authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
 homepage = "https://zksync.io/"
-repository = "https://github.com/matter-labs/zkos-wrapper/"
+repository = "https://github.com/ADI-Foundation-Labs/ADI-Stack-zkOS-Wrapper/"
 license = "MIT OR Apache-2.0"
 keywords = ["blockchain", "zksync", "zk", "risc-v"]
 categories = ["cryptography"]
@@ -24,20 +24,20 @@ bellman = { package = "zksync_bellman", version = "=0.32.5" }
 rescue_poseidon = "=0.32.5"
 snark_wrapper = "=0.32.5"
 
-final_risc_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "final_reduced_risc_v_machine_verifier", features = [
+final_risc_verifier = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "final_reduced_risc_v_machine_verifier", features = [
     "proof_utils",
-], tag = "v0.5.0" }
-reduced_risc_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "reduced_risc_v_log_23_machine_verifier", features = [
+], tag = "v0.5.0-a" }
+reduced_risc_verifier = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "reduced_risc_v_log_23_machine_verifier", features = [
     "proof_utils",
-], tag = "v0.5.0" }
-blake_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "blake2_with_compression_verifier", features = [
+], tag = "v0.5.0-a" }
+blake_verifier = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "blake2_with_compression_verifier", features = [
     "proof_utils",
-], tag = "v0.5.0" }
-execution_utils = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "execution_utils", tag = "v0.5.0" }
-setups = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "setups", tag = "v0.5.0" }
-mersenne_field = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "field", tag = "v0.5.0" }
-zkos_verifier_generator = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "verifier_generator", tag = "v0.5.0" }
-prover = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "prover", tag = "v0.5.0" }
+], tag = "v0.5.0-a" }
+execution_utils = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "execution_utils", tag = "v0.5.0-a" }
+setups = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "setups", tag = "v0.5.0-a" }
+mersenne_field = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "field", tag = "v0.5.0-a" }
+zkos_verifier_generator = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "verifier_generator", tag = "v0.5.0-a" }
+prover = { git = "https://github.com/ADI-Foundation-Labs/ADI-Stack-Airbender-System.git", package = "prover", tag = "v0.5.0-a" }
 
 serde_json = { version = "*" }
 serde = { version = "1", default-features = false, features = [
