--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ members = ["circuit_mersenne_field", "wrapper", "wrapper_generator"]
 [workspace.package]
 version = "0.1.0"
 edition = "2024"
-authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
-homepage = "https://zksync.io/"
+authors = ["ADI Foundation"]
+homepage = "https://adi.foundation/"
 repository = "https://github.com/ADI-Foundation-Labs/ADI-Stack-zkOS-Wrapper/"
 license = "MIT OR Apache-2.0"
 keywords = ["blockchain", "zksync", "zk", "risc-v"]
